[package]
name = "ReprRustSourceBasedCoverage"
version = "0.1.0"
authors = ["Jozef Hollý <j2.00ghz@gmail.com>"]
edition = "2018"

# [[bench]]
# harness = false
# name = 'bench'

[dev-dependencies]
#criterion = '0.3'
proptest = "1.0"
test-generator = "0.3"

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
clap = '2.33.3'
csv = '1.1.5'
flate2 = '1.0.19'
image = '0.23.12'
itertools = "0.10"
log = '0.4.11'
rayon = '1.5.0'
stderrlog = '0.5.0'
structopt = "0.3"
walkdir = '2'
webp = "0.1.0"
